--- a/src/components/homepage/homepage.css
+++ b/src/components/homepage/homepage.css
@@ -4,8 +4,9 @@
     justify-content: space-around;
     /* background: black; */
     min-height: 50vh;
-    width: 100%;
-    padding: 20px;
+    width: 75%;
+    padding: 10px;
+    margin: 5px auto;
 }
 
 .homepage h1 {
