--- a/src/components/app/demos/demos.css
+++ b/src/components/app/demos/demos.css
@@ -51,6 +51,7 @@
 .demo .options-container {
     position: relative;
     width: 90%;
+    height: 100%;
     margin: 10px;
     padding: 15px;
     box-shadow: rgba(0, 0, 0, 0.7) 0px 5px 10px;
@@ -68,18 +69,22 @@
 }
 
 .demo .options-container .options-box {
+    position: relative;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     padding: 10px;
     margin: 10px;
+    height: 100%;
     box-shadow: inset rgba(0, 0, 0, 0.5) 0px 5px 10px;
     background: #0d428c;
 }
 
 .demo .options-container .options-box .option-section {
+    position: relative;
     padding: 10px;
     margin: 5px;
+    height: 100%;
     box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 10px;
     background: white;
 }
@@ -110,6 +115,38 @@
 
 .demo .options-container .options-box button:focus {
     outline: none;
+}
+
+.citation-box {
+    position: relative;
+    width: 80%;
+    height: 100%;
+}
+
+.citation-box button a {
+    text-decoration: none;
+    color: black;
+    transition: .5s;
+}
+
+.citation-box button:hover a {
+    color: white;
+    transition: .5s;
+}
+
+.citation-embedded-video {
+    position: relative;
+    padding-top: 56.25%; /* proportion value to aspect ratio 16:9 (9 / 16 = 0.5625 or 56.25%) */
+    height: 100%;
+    overflow: hidden;
+}
+
+.citation-embedded-video iframe {
+    position: absolute;
+    top: 0; 
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .demo .demo-container {
@@ -253,3 +290,4 @@
     color: black;
     border: 1px solid rgba(0, 0, 0, 0.5);
 }
+
