--- a/src/components/icons/isometricHoverRiseSocialMedia/isometricHoverRiseSocialMediaIcons.css
+++ b/src/components/icons/isometricHoverRiseSocialMedia/isometricHoverRiseSocialMediaIcons.css
@@ -42,7 +42,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: start;
+    justify-content: flex-start;
 }
 
 .isometric-hover-rise-social-media-icons .isometric-hover-rise-social-media-icon-row {
