--- a/src/components/buttons/neonReflective/neonReflectiveButtons.css
+++ b/src/components/buttons/neonReflective/neonReflectiveButtons.css
@@ -1,17 +1,16 @@
 /* Neon Reflective Button Demo */
 .neon-reflective-buttons {
     margin: 0;
-    padding: 0;
+    padding: 20px;
     font-family: sans-serif;
     box-sizing: border-box;
     width: 100%;
-    min-height: 95vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background: rgb(50, 50, 50);
-    box-shadow: inset rgba(0, 0, 0, 0.9) 0px 5px 45px;
+    box-shadow: inset rgba(0, 0, 0, 0.9) 0px 5px 15px;
 }
 
 .neon-reflective-buttons.dark {
