--- a/src/components/cards/hoverSwitch/hoverSwitchCards.css
+++ b/src/components/cards/hoverSwitch/hoverSwitchCards.css
@@ -1,7 +1,7 @@
 /* Hover Switch Card Demo */
 .hover-switch-cards {
-    min-height: 95vh;
     width: 100%;
+    padding: 20px;
     font-family: "Poppins", sans-serif;
     display: flex;
     justify-content: center;
@@ -14,6 +14,7 @@
     width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
@@ -23,7 +24,7 @@
     position: relative;
     width: 300px;
     height: 400px;
-    margin: 50px 100px;
+    margin: 15px;
 }
 
 .hover-switch-cards .container .card .face {
