--- a/src/components/icons/isometricSocialMedia/isometricSocialMediaIcons.css
+++ b/src/components/icons/isometricSocialMedia/isometricSocialMediaIcons.css
@@ -1,8 +1,7 @@
 .isometric-social-media-icons {
     margin: 0;
-    padding-bottom: 30px;
     width: 100%;
-    min-height: 95vh;
+    padding: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
