--- a/src/components/app/demos/demos.css
+++ b/src/components/app/demos/demos.css
@@ -6,7 +6,7 @@
     min-height: 100vh;
 }
 
-.demo-header {
+.demo-section-header {
     display: flex;
     justify-content: space-around;
     flex-direction: column;
@@ -14,18 +14,20 @@
     width: 75%;
     padding: 10px;
     margin: 5px auto;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.demo-header h1 {
+.demo-setion-header h1 {
     text-align: center;
     color: #0d428c;
     font-size: 40px;
 }
 
-.demo-header .underline {
-    border-bottom: 2px solid #0d428c;
-    width: 70%;
-    margin: 10px auto;
+.underline {
+    border-bottom: 3px solid #0d428c;
+    width: 80%;
+    margin: 40px auto;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 5px 5px;
 }
 
 .demo .demo-container {
@@ -35,7 +37,7 @@
     justify-content: center;
     align-items: center;
     width: 90%;
-    min-height: 95vh;
+    /* min-height: 95vh; */
     margin: 15px 0;
     font-family: "Poppins", sans-serif;
     box-shadow: inset rgba(0, 0, 0, 0.9) 0px 5px 10px;
@@ -46,6 +48,7 @@
     margin: 20px;
     color: #0d428c;
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .demo .options-container {
@@ -56,6 +59,7 @@
     padding: 15px;
     box-shadow: rgba(0, 0, 0, 0.7) 0px 5px 10px;
     color: #0d428c;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .demo .options-container h3 {
@@ -117,10 +121,15 @@
     outline: none;
 }
 
+.demo .options-container .options-box.source-box {
+    justify-content: center;
+} 
+
 .citation-box {
     position: relative;
-    width: 80%;
+    width: 85%;
     height: 100%;
+    align-self: center;
 }
 
 .citation-box button a {
