--- a/src/components/app/navbar/mainnavbar.css
+++ b/src/components/app/navbar/mainnavbar.css
@@ -75,7 +75,8 @@
 .navbar-container .ot-icon {
     width: 80px;
     box-shadow: rgba(0, 0, 0, 0.7) 0px 5px 15px;
-    border-radius: 50%;
+    border-radius: 5px;
+    background: rgb(34, 34, 34);
     transition: .5s;
 }
 
