--- a/src/components/cards/depthOfField/depthOfFieldCards.css
+++ b/src/components/cards/depthOfField/depthOfFieldCards.css
@@ -8,7 +8,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    min-height: 95vh;
+    padding: 35px;
     background: linear-gradient(0deg, white 50%, #2196f3);
     box-shadow: inset rgba(0, 0, 0, 0.9) 0px 5px 10px;
 }
