--- a/src/components/cards/directionAware/directionAwareCards.css
+++ b/src/components/cards/directionAware/directionAwareCards.css
@@ -8,7 +8,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    min-height: 95vh;
+    padding: 25px;
     background: linear-gradient(0deg, #075b9f 0%, #0b74cb 10%, #0b74cb 50%, rgb(215, 215, 215) 50%, rgb(215, 215, 215) 100%);
     box-shadow: inset rgba(0, 0, 0, 0.9) 0px 5px 10px;
 }
