--- a/src/components/cards/flipUpHover/flipUpHoverCards.css
+++ b/src/components/cards/flipUpHover/flipUpHoverCards.css
@@ -1,13 +1,12 @@
 /* Flip Up Card Hover Demo */
 .flip-up-hover-cards {
     margin: 0;
-    padding: 0;
+    padding: 20px;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 95vh;
     width: 100%;
     background: #f3f3f3;
     box-shadow: inset rgba(0, 0, 0, 0.9) 0px 5px 10px;
