--- a/src/components/cards/gameStyle/gameStyleCards.css
+++ b/src/components/cards/gameStyle/gameStyleCards.css
@@ -6,7 +6,7 @@
     font-family: sans-serif;
     background: #262626;
     width: 100%;
-    height: 95vh;
+    min-height: 95vh;
     box-shadow: inset rgba(0, 0, 0, 0.9) 0px 5px 10px;
 }
 
