--- a/src/components/cards/isometricHover/isometricHoverCards.css
+++ b/src/components/cards/isometricHover/isometricHoverCards.css
@@ -1,13 +1,12 @@
 /* Isometric Card Hover Demo */
 .isometric-hover-cards {
     margin: 0;
-    padding: 0;
+    padding: 20px;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 95vh;
     width: 100%;
     background: #f3f3f3;
     overflow: hidden;
