--- a/src/components/cards/swivelRotation/swivelRotationCards.css
+++ b/src/components/cards/swivelRotation/swivelRotationCards.css
@@ -1,10 +1,9 @@
 /* Swivel Rotation Card Demo */
 .swivel-rotation-cards {
     margin: 0;
-    padding: 0;
+    padding: 25px;
     font-family: "Poppins", sans-serif;
     width: 100%;
-    min-height: 95vh;
     display: flex;
     justify-content: center;
     align-items: center;
