--- a/src/components/icons/animatedMovement/animatedMovementIcons.css
+++ b/src/components/icons/animatedMovement/animatedMovementIcons.css
@@ -4,8 +4,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 95vh;
     width: 100%;
+    padding: 20px;
     background: #072b3a;
     box-shadow: inset rgba(0, 0, 0, 0.9) 0px 5px 45px;
 }
