--- a/src/components/navbars/targetedHover/targetedHoverNavbars.css
+++ b/src/components/navbars/targetedHover/targetedHoverNavbars.css
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    min-height: 95vh;
+    padding: 20px;
     background: rgb(235, 235, 235);
     box-shadow: inset rgba(0, 0, 0, 0.7) 0px 5px 45px;
 }
