--- a/src/components/testimonials/bottomColorRise/bottomColorRiseTestimonials.css
+++ b/src/components/testimonials/bottomColorRise/bottomColorRiseTestimonials.css
@@ -1,18 +1,17 @@
 /* Bottom Color Rise Testimonials */
 .bottom-color-rise-testimonials {
     width: 100%;
-    height: 95vh;
-    padding: 50px 0;
+    padding: 30px 0;
     font-family: sans-serif;
     background: #262626;
     box-shadow: inset rgba(0, 0, 0, 0.7) 0px 5px 45px;
 }
 
 .bottom-color-rise-testimonials .testimonials {
-    margin: 100px auto 100px;
+    margin: 10px auto;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-    grid-gap: 20px;
+    grid-gap: 5px;
 }
 
 .bottom-color-rise-testimonials .testimonials .card {
