--- a/src/components/testimonials/colorfulHoverQuoteBox/colorfulHoverQuoteBoxTestimonials.css
+++ b/src/components/testimonials/colorfulHoverQuoteBox/colorfulHoverQuoteBoxTestimonials.css
@@ -5,8 +5,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 95vh;
     width: 100%;
+    padding: 30px 10px;
     background: rgb(235, 235, 235);
     box-shadow: inset rgba(0, 0, 0, 0.7) 0px 5px 45px;
 }
