--- a/src/components/testimonials/quoteMovement/quoteMovementTestimonials.css
+++ b/src/components/testimonials/quoteMovement/quoteMovementTestimonials.css
@@ -1,12 +1,11 @@
 /* Quote Movement Testimonials */
 .quote-movement-testimonials {
     margin: 0;
-    padding: 0;
+    padding: 60px 20px;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    min-height: 95vh;
     background: #f5f5f5;
     font-family: "Poppins", sans-serif;
     box-shadow: inset rgba(0, 0, 0, 0.7) 0px 5px 45px;
